Sonar some fixes